# voice_server

./: .gitignore  LICENSE  README.md  backend_pool.py  backend_runner.py  backends.yaml  cli.py  client.py  process_backend.py  pyproject.toml  server.py  token_streamer.py
backends/: __init__.py  chatterbox.py  glm_tts.py  kokoro.py  pocket_tts.py  vibevoice.py
voice_samples/: put_voice_files_here.md
