[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice_server"
version = "0.1.0"
description = "Modular TTS server with swappable backend adapters"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.24.0,<2.4",
    # VibeVoice deps (pinned versions for compatibility)
    "torch>=2.0.0",
    "transformers==4.51.3",  # VibeVoice requires this specific version
    "accelerate==1.6.0",
    "diffusers>=0.20.0",
]

[tool.setuptools]
py-modules = ["server", "cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backends*"]
